Documentation of process in readme file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <section>
-        <h1>L&LT</h1>
+        <h1>L And LT</h1>
         <p>Welcome To This Site</p>
     </section>
 </body>
