adding home page html structure

--- a/index.html
+++ b/index.html
@@ -3,12 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>L&LT</title>
+    <title>Learn And Love Tech</title>
 </head>
 <body>
-    <section>
-        <h1>L And LT</h1>
-        <p>Welcome To This Site</p>
-    </section>
+    <main class="nav-section">
+        <div class="logo">
+            <h1>Learn & Love Tech</h1>
+        </div>
+        <nav>
+            <a href="">Home</a>
+            <a href="">Plans</a>
+            <a href="">About</a>
+            <button href="">Contact</button>
+        </nav>
+    </main>
+   <section class="hero-section">
+    <div class="hero-image">
+        <img src="/images/Tech One.jpeg" alt="">
+    </div>
+    <div class="hero-text-box">
+        <h2>Words,Words,Words</h2>
+    </div>
+
+   </section>
 </body>
 </html>
