Adding Image, Reformating structure of home page, creation of css page

--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
 <body>
     <main class="nav-section">
         <div class="logo">
-            <h1>Learn & Love Tech</h1>
+            <h1>LLT</h1>
         </div>
         <nav>
             <a href="">Home</a>
-            <a href="">Plans</a>
             <a href="">About</a>
             <button href="">Contact</button>
         </nav>
@@ -22,8 +21,16 @@
         <img src="/images/Tech One.jpeg" alt="">
     </div>
     <div class="hero-text-box">
-        <h2>Words,Words,Words</h2>
+        <h2>Fueling Futures: Igniting a Passion for Tech in Young Minds!</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, dolorem cupiditate. Libero ad omnis saepe fugit voluptate accusamus aliquam cum placeat. Aspernatur laborum deleniti, ut asperiores enim perferendis obcaecati eligendi?</p>
     </div>
+   </section>
+   <section class="company-section">
+    <div class="company-section-text-box">
+        <h2>Tech Pioneer Empowers Young Minds: A Journey of Inspiring Innovation in Education!</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque porro ex animi, odio, laboriosam libero natus quaerat commodi laudantium aperiam recusandae atque officia temporibus similique! Similique possimus consectetur soluta vel, esse ipsam accusantium illo repellendus sed non minima doloribus blanditiis voluptatum consequuntur quaerat atque officiis voluptate obcaecati eligendi. Enim perferendis numquam ducimus soluta consequatur, architecto corporis! Officiis quod rem, unde quia dolores vel sit eum tenetur velit, ab a possimus minus eius commodi illo labore nisi debitis, aliquid voluptatem earum? Natus nesciunt debitis repellat perferendis illo ad fuga quasi sit, rerum eveniet a in tempore hic molestias eaque quis distinctio!</p>
+    </div>
+
    </section>
 </body>
 </html>
