style changes to html structure

--- a/index.html
+++ b/index.html
@@ -3,33 +3,79 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Learn And Love Tech</title>
 </head>
 <body>
-    <main class="nav-section">
-        <div class="logo">
-            <h1>LLT</h1>
-        </div>
-        <nav>
-            <a href="">Home</a>
-            <a href="">About</a>
-            <button href="">Contact</button>
-        </nav>
-    </main>
-   <section class="hero-section">
-    <div class="hero-image">
-        <img src="/images/Tech One.jpeg" alt="">
-    </div>
-    <div class="hero-text-box">
-        <h2>Fueling Futures: Igniting a Passion for Tech in Young Minds!</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, dolorem cupiditate. Libero ad omnis saepe fugit voluptate accusamus aliquam cum placeat. Aspernatur laborum deleniti, ut asperiores enim perferendis obcaecati eligendi?</p>
+    <nav id="navbar">
+        <h1>LLT</h1>
+        <ul>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Contact</a></li>
+        </ul>
+    </nav>
+   <section id="hero">
+    <div class="hero-content">
+        <h1>Fueling Futures: Igniting a Passion for Tech in Young Minds!</h1>
+        <p>Empower tomorrow's innovators today with our specialized training</p>
     </div>
    </section>
-   <section class="company-section">
-    <div class="company-section-text-box">
+   <section id="company-info">
+    <div class="info-img"></div>
+    <div class="info-content">
         <h2>Tech Pioneer Empowers Young Minds: A Journey of Inspiring Innovation in Education!</h2>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque porro ex animi, odio, laboriosam libero natus quaerat commodi laudantium aperiam recusandae atque officia temporibus similique! Similique possimus consectetur soluta vel, esse ipsam accusantium illo repellendus sed non minima doloribus blanditiis voluptatum consequuntur quaerat atque officiis voluptate obcaecati eligendi. Enim perferendis numquam ducimus soluta consequatur, architecto corporis! Officiis quod rem, unde quia dolores vel sit eum tenetur velit, ab a possimus minus eius commodi illo labore nisi debitis, aliquid voluptatem earum? Natus nesciunt debitis repellat perferendis illo ad fuga quasi sit, rerum eveniet a in tempore hic molestias eaque quis distinctio!</p>
+        <p>Meet our team, true tech pioneers who are on a mission to empower young minds in the world of technology. With an unwavering passion for innovation and education, our team has dedicated their career to inspiring the next generation of tech enthusiasts.</p>
+        <button>Read More</button>
     </div>
    </section>
+   <section id="box">
+    <div>
+        <h2>Coding Classes</h2>
+        <p>Introductory and advanced coding classes for kids, covering languages like Scratch, Python, Java, and more.</p>
+    </div>
+    <div>
+        <h2>Game Development</h2>
+        <p>Courses that teach children how to create their own video games, helping them understand game design and programming.</p>
+    </div>
+    <div>
+        <h2>App Development</h2>
+        <p>App development courses for kids to learn how to design and code mobile applications for various platforms.</p>
+    </div>
+    <div>
+        <h2>Web Development</h2>
+        <p>Introduction to web development, including HTML, CSS, and JavaScript, enabling kids to build their own websites.</p>
+    </div>
+    <div>
+        <h2>Virtual Reality (VR) and Augmented Reality (AR)</h2>
+        <p>Classes on creating VR and AR experiences, allowing kids to explore the immersive world of technology.</p>
+    </div>
+    <div>
+        <h2>Digital Art and Animation:</h2>
+        <p>ICourses that help children express their creativity through digital art and animation, using software like Photoshop and Blender.</p>
+    </div>
+    <div>
+        <h2>Cybersecurity</h2>
+        <p>Cybersecurity awareness and basic training to promote online safety and responsible internet use.</p>
+    </div>
+    <div>
+        <h2>Tech Challenges and Competitions</h2>
+        <p>Organizing tech competitions and challenges to test and showcase kids' skills, fostering a competitive spirit.</p>
+    </div>
+    <div>
+        <h2>Certifications</h2>
+        <p>Providing certifications and badges to acknowledge kids' achievements and skills development.</p>
+    </div>
+    <div>
+        <h2>Career Pathway Guidance</h2>
+        <p>Guidance and information about potential career paths in technology, inspiring kids to consider tech-related professions.</p>
+    </div>
+    <div>
+        <p>These offerings aim to provide a comprehensive tech education for children, promoting a love for technology and fostering valuable skills for their future.</p>
+    </div>
+   </section>
+   <footer id="main-footer">
+    <p>Learn and Love Tech 2023, All Rights Reserved</p>
+   </footer>
 </body>
 </html>
